yay! I's starting to come together

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     }
   },
   "autoload-dev": {
-    "Allure2Adapter\\Tests\\": "tests"
+    "psr-4": {
+      "Allure2Adapter\\Tests\\": "tests"
+    }
   },
   "require-dev": {
     "fzaninotto/faker": "^1.9"
